--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,7 +3,8 @@
 
 name: Deploy to preview channel
 on: 
-  pull_request:
+  pull_request_target:
+    types: [assigned, opened, synchronize, reopened]
 
 jobs:
   build_and_preview:
