--- a/.github/workflows/firebase-hosting-merge-prod.yml
+++ b/.github/workflows/firebase-hosting-merge-prod.yml
@@ -5,7 +5,7 @@ name: Deploy to live channel
 'on':
   push:
     branches:
-      - dev
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -19,8 +19,8 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEXTJS_BLOG_8DC50 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEXTJS_BLOG_PROD }}'
           channelId: live
-          projectId: nextjs-blog-8dc50
+          projectId: nextjs-blog-prod
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
