--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,8 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to preview channel
-on: 
-  pull_request:
+'on': pull_request
 
 jobs:
   build_and_preview:
@@ -12,10 +11,11 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-      - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEXTJS_BLOG_8DC50 }}'
           projectId: nextjs-blog-8dc50
+        env: 
+          FIREBASE_CLI_PREVIEWS: hostingchannels
       
