--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,9 @@
 {
   "hosting": {
     "public": "out",
+    "predeploy": [
+      "npm ci", "npm run build"
+    ],
     "cleanUrls": true,
     "ignore": [
       "firebase.json",
