--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "npm run env && next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "env": "cp env.${GCLOUD_PROJECT:-local}.js out/env.js"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^15.0.1",
