channel the channel ID from live to qa

--- a/.github/workflows/firebase-hosting-merge-prod.yml
+++ b/.github/workflows/firebase-hosting-merge-prod.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_NEXTJS_BLOG_PROD }}'
-          channelId: live
+          channelId: qa
           projectId: nextjs-blog-prod
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
